--- a/.github/workflows/toPDF.yml
+++ b/.github/workflows/toPDF.yml
@@ -50,11 +50,14 @@ jobs:
       with:
         name: cv_tex.pdf
         path: .
+    - name: Prepare final
+    - run: cp cv_tex.pdf CV_Rafael_Mukhametdzhanov.pdf
     - name: Save
       uses: softprops/action-gh-release@v0.1.5
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: |
+          CV_Rafael_Mukhametdzhanov.pdf
           cv_md.pdf
           cv_tex.pdf
