--- a/.github/workflows/toPDF.yml
+++ b/.github/workflows/toPDF.yml
@@ -14,25 +14,25 @@ jobs:
       with:
         path: output
         name: cv_md.pdf
-  buildTEX:
+  buildTexV1:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     - run: mkdir output   
-    - name: Convert tex to pdf
+    - name: Convert tex_v1 to pdf
       uses: xu-cheng/latex-action@master
       with:
         root_file: cv.tex
-        working_directory: src
+        working_directory: tex_v1/src
         compiler: xelatex
-    - run: cp src/cv.pdf output/cv_tex.pdf
+    - run: cp src/cv.pdf output/cv_tex_v1.pdf
     - uses: actions/upload-artifact@master
       with:
         path: output
-        name: cv_tex.pdf
+        name: cv_tex_v1.pdf
   release:
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [buildMD, buildTEX]
+    needs: [buildMD, buildTexV1]
     runs-on: ubuntu-18.04
     steps:
     - name: Get md
@@ -40,13 +40,13 @@ jobs:
       with:
         name: cv_md.pdf
         path: .
-    - name: Get tex
+    - name: Get tex v1
       uses: actions/download-artifact@master
       with:
-        name: cv_tex.pdf
+        name: cv_tex_v1.pdf
         path: .
     - name: Prepare final
-      run: cp cv_tex.pdf CV_Rafael_Mukhametdzhanov.pdf
+      run: cp cv_tex_v1.pdf CV_Rafael_Mukhametdzhanov.pdf
     - name: Save
       uses: softprops/action-gh-release@v0.1.5
       env:
@@ -55,4 +55,4 @@ jobs:
         files: |
           CV_Rafael_Mukhametdzhanov.pdf
           cv_md.pdf
-          cv_tex.pdf
+          cv_tex_v1.pdf
