--- a/.github/workflows/toPDF.yml
+++ b/.github/workflows/toPDF.yml
@@ -27,7 +27,7 @@ jobs:
         compiler: xelatex
     - run: pwd
     - run: ls
-    - run: cp src/cv.pdf output/cv_tex_v1.pdf
+    - run: cp tex_v1/src/cv.pdf output/cv_tex_v1.pdf
     - uses: actions/upload-artifact@master
       with:
         path: output
